Kyverno/image-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-tag
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      It is not good practice to use latest tag image, please use specific tag image
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "image tag is required."
      pattern:
        spec:
          containers:
          - image: "*:*"
  - name: validate-latest-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "image should not be having latest tag"
      pattern:
        spec:
          containers:
          - image: "!*:latest"
