Kyverno/ns-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-name-label-namespace
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      every ns need to have label in it.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-label
    match:
      any:
      - resources:
          kinds:
          - Namespace
    validate:
      message: "label need for namespace."
      pattern:
        metadata:
          labels:
            name: "*"
